Styling adjustments to prevent cell shift when displaying "From:" or "To:" text on selection of date.

--- a/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
+++ b/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
@@ -1,6 +1,6 @@
 .calendar {
   .calendar-pagination {
-    font-size: 1rem;
+    font-size: 16px;
     margin: 0.5rem -15px 0 -15px;
 
     .btn {
@@ -30,21 +30,15 @@
     text-transform: uppercase;
   }
 
-  .row-days {
-    .col {
-      padding: 0 10px;
-    }
-  }
-
   .table {
     th, td {
-      border-bottom: 0 none;
-      border-top: 0 none;
+      border-radius: 0;
       color: #333;
       font-size: 12px;
       height: 36px;
       line-height: 1;
       padding: 0;
+      text-align: center;
       vertical-align: middle;
     }
 
@@ -53,47 +47,50 @@
     }
 
     td {
+      border-radius: 0;
       cursor: pointer;
       font-weight: 900;
-      min-width: 30px;
+      width: 32px;
+      max-width: 32px;
 
       &:not(.disabled):not(.selected) {
         &:hover {
           background-color: #eee;
-          border-radius: 5px;
           color: #333;
         }
       }
-    }
 
-    .selected {
-      background-color: #003D79;
-      border-radius: 5px;
-      color: #fff;
-
-      &:hover {
+      &.selected {
         background-color: #003D79;
+        border-radius: 5px;
+        color: #fff;
+        font-size: 12px;
+
+        &:hover {
+          background-color: #003D79;
+        }
       }
-    }
 
-    .in-selected-range {
-      background-color: lighten($color: #003D79, $amount: 70);
-      border-radius: 0;
-    }
-
-    .disabled {
-      background-color: transparent;
-      color: #666;
-      cursor: not-allowed;
-      font-weight: 400;
-    }
-
-    .different-month {
-      color: #888;
-      font-weight: 500;
+      &.in-selected-range {
+        background-color: lighten($color: #003D79, $amount: 70);
+        border-radius: 0;
+        font-size: 12px;
+      }
 
       &.disabled {
-        color: #ccc;
+        background-color: transparent;
+        color: #666;
+        cursor: not-allowed;
+        font-weight: 400;
+      }
+
+      &.different-month {
+        color: #888;
+        font-weight: 500;
+
+        &.disabled {
+          color: #ccc;
+        }
       }
     }
   }
