--- a/src/modules/ngx-daterange/src/components/datepicker/date-range-picker.component.scss
+++ b/src/modules/ngx-daterange/src/components/datepicker/date-range-picker.component.scss
@@ -6,7 +6,7 @@
     background: #fff;
     border-radius: 9px;
     box-shadow: 0px 0px 10px 0px rgba(129, 139, 144, 0.5); // 50% #818B90
-    font: 14px "Roboto", Helvetica, Arial, sans-serif;
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
     position: absolute;
     top: 44px;
     z-index: 3000;
@@ -70,8 +70,70 @@
       box-shadow: none;
     }
 
+    &.is-chrome {
+      .form-inputs {
+        .input-with-icon {
+          span {
+            position: relative;
+            top: 1px;
+          }
+        }
+      }
+    }
+
     .ranges {
       margin-top: 1rem;
+    }
+
+    .form-inputs {
+      background-color: #6E777C;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+      color: #fff;
+      font-size: 16px;
+
+      > .col {
+        padding: 0.5rem 15px;
+        min-width: 270px; // allows for "From:" and "To:" text. Prevents shift in table cell widths when date is selected
+      }
+
+      .input-with-icon {
+        display: flex;
+        align-content: flex-start;
+        align-items: center !important;
+
+        i {
+          &.material-icons {
+            top: 0;
+          }
+
+          margin-right: 0.5rem;
+        }
+
+        span {
+          line-height: 1;
+        }
+
+      }
+
+      .form-control {
+        background: none;
+        border: 0 none;
+        color: #fff;
+        display: inline-block;
+        padding: 0;
+        width: 150px; // allows for "From:" and "To:" text. Prevents shift in table cell widths when date is selected
+
+        &::placeholder  {
+          color: #fff;
+        }
+      }
+    }
+
+    .form-inputs, .row-calendars {
+      > div:nth-child(2) {
+        border-left: solid 2px #C6D1D6;
+      }
     }
   }
 
@@ -79,49 +141,6 @@
     &.material-icons {
       position: relative;
       top: 2px;
-    }
-  }
-
-  .form-inputs {
-    background-color: #6E777C;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    color: #fff;
-    font-size: 1rem;
-
-    > .col {
-      padding: 0.5rem 15px;
-    }
-
-    .input-with-icon {
-      display: flex;
-      align-content: flex-start;
-      align-items: center !important;
-
-      i {
-        &.material-icons {
-          top: 0;
-        }
-
-        margin-right: 0.5rem;
-      }
-    }
-
-    .form-control {
-      background: none;
-      border: 0 none;
-      color: #fff;
-      padding: 0;
-
-      &::placeholder  {
-        color: #fff;
-      }
-    }
-  }
-
-  .form-inputs, .row-calendars {
-    > div:nth-child(2) {
-      border-left: solid 2px #C6D1D6;
     }
   }
 }
